added and styled new sections

--- a/index.html
+++ b/index.html
@@ -40,13 +40,212 @@
     </section>
 
     <!-- Partners section -->
-    <section>
+    <section class="partners-section">
         <img src="./assets/icons/amazon-icon.svg" alt="">
         <img src="./assets/icons/dribbble-icon.svg" alt="">
         <img src="./assets/icons/hubspot-icon.svg" alt="">
         <img src="./assets/icons/notion-icon.svg" alt="">
         <img src="./assets/icons/netflix-icon.svg" alt="">
         <img src="./assets/icons/notion-icon.svg" alt="">
+        <img src="./assets/icons/zoom-icon.svg" alt="">
+    </section>
+
+    <!-- Services section -->
+    <section class="services">
+        <div class="services-intro">
+            <h2>Services</h2>
+            <p>
+                At our digital marketing agency, we offer a range of services to <br> help businesses grow and succeed online. These services include:
+            </p>
+        </div>
+        <div class="services-container">
+            <div class="service-card one">
+                <div>
+                    <h4>Search engine</h4>
+                    <h4>optimization</h4>
+                    <div class="card-cta">
+                        <button><img src="./assets/icons/arrow-top-right.svg" alt=""></button>
+                        <p>Learn more</p>
+                    </div>
+                </div>
+                <img src="./assets/images/illustration1.svg" alt="">
+            </div>
+            <div class="service-card two">
+                <div>
+                    <h4>Pay-per-click</h4>
+                    <h4>advertising</h4>
+                    <div class="card-cta">
+                        <button><img src="./assets/icons/arrow-top-right.svg" alt=""></button>
+                        <p>Learn more</p>
+                    </div>
+                </div>
+                <img src="./assets/images/illustration2.svg" alt="">
+            </div>
+            <div class="service-card three">
+                <div>
+                    <h4>Social media</h4>
+                    <h4>Marketing</h4>
+                    <div class="card-cta">
+                        <button><svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.25 13.701C0.532561 14.1152 0.286748 15.0326 0.700962 15.75C1.11518 16.4674 2.03256 16.7133 2.75 16.299L1.25 13.701ZM20.7694 5.38823C20.9838 4.58803 20.5089 3.76552 19.7087 3.55111L6.66874 0.0570541C5.86854 -0.157359 5.04603 0.317515 4.83162 1.11771C4.61721 1.91791 5.09208 2.74042 5.89228 2.95483L17.4834 6.06066L14.3776 17.6518C14.1631 18.452 14.638 19.2745 15.4382 19.4889C16.2384 19.7033 17.0609 19.2284 17.2753 18.4282L20.7694 5.38823ZM2.75 16.299L20.0705 6.29904L18.5705 3.70096L1.25 13.701L2.75 16.299Z" fill="black"/>
+                        </svg>   </button>
+                        <p>Learn more</p>
+                    </div>
+                </div>
+                <img src="./assets/images/illustration3.svg" alt="">
+            </div>
+            <div class="service-card four">
+                <div>
+                    <h4>Email</h4>
+                    <h4>Marketing</h4>
+                    <div class="card-cta">
+                        <button><img src="./assets/icons/arrow-top-right.svg" alt=""></button>
+                        <p>Learn more</p>
+                    </div>
+                </div>
+                <img src="./assets/images/illustration4.svg" alt="">
+            </div>
+            <div class="service-card five">
+                <div>
+                    <h4>Content</h4>
+                    <h4>Creation</h4>
+                    <div class="card-cta">
+                        <button><img src="./assets/icons/arrow-top-right.svg" alt=""></button>
+                        <p>Learn more</p>
+                    </div>
+                </div>
+                <img src="./assets/images/illustration5.svg" alt="">
+            </div>
+            <div class="service-card six">
+                <div>
+                    <h4>Analytics and</h4>
+                    <h4>Tracking</h4>
+                    <div class="card-cta">
+                        <button><svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M1.25 13.701C0.532561 14.1152 0.286748 15.0326 0.700962 15.75C1.11518 16.4674 2.03256 16.7133 2.75 16.299L1.25 13.701ZM20.7694 5.38823C20.9838 4.58803 20.5089 3.76552 19.7087 3.55111L6.66874 0.0570541C5.86854 -0.157359 5.04603 0.317515 4.83162 1.11771C4.61721 1.91791 5.09208 2.74042 5.89228 2.95483L17.4834 6.06066L14.3776 17.6518C14.1631 18.452 14.638 19.2745 15.4382 19.4889C16.2384 19.7033 17.0609 19.2284 17.2753 18.4282L20.7694 5.38823ZM2.75 16.299L20.0705 6.29904L18.5705 3.70096L1.25 13.701L2.75 16.299Z" fill="black"/>
+                        </svg>   </button>
+                        <p>Learn more</p>
+                    </div>
+                </div>
+                <img src="./assets/images/illustration6.svg" alt="">
+            </div>
+        </div>
+        <!-- proposal section -->
+        <div class="proposal-section">
+            <div>
+                <h5>Let's make things happen</h5>
+                <p>
+                    Contact us today to learn more about how our digital<br> marketing services can help your business grow<br> and succeed online.
+                </p>
+                <button>Get your free proposal</button>
+            </div>
+            <img src="./assets/images/illustration7.svg" alt="">
+        </div>
+    </section>
+
+    <!-- Case studeis section -->
+    <section class="case-studies">
+        <div class="case-studies_intro">
+            <h2>Case studies</h2>
+            <p>
+                Explore Real-Life Examples of Our Proven Digital Marketing<br> Success through Our Case Studies
+            </p>
+        </div>
+        <div class="case-wrapper">
+            <div class="case-study">
+                <p>
+                    For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50% increase in website traffic and a 25% increase in sales.
+                </p>
+                <div>
+                    <p>Learn more</p>
+                    <img src="/assets/icons/arrow-top-right.svg" alt="a">
+                </div>
+            </div>
+            <div class="case-study">
+                <p>
+                    For a B2B software company, we developed an SEO strategy that resulted in a first page ranking for key keywords and a 200% increase in organic traffic.
+                </p>
+                <div>
+                    <p>Learn more</p>
+                    <img src="/assets/icons/arrow-top-right.svg" alt="a">
+                </div>
+            </div>
+            <div class="case-study">
+                <p>
+                    For a national retail chain, we created a social media marketing campaign that increased followers by 25% and generated a 20% increase in online sales.
+                </p>
+                <div>
+                    <p>Learn more</p>
+                    <img src="/assets/icons/arrow-top-right.svg" alt="a">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Work process section -->
+    <section class="work-process-section">
+        <div class="case-studies_intro">
+            <h2>Our Working Process</h2>
+            <p>
+                Step-by-Step Guide to Achieving <br> Your Business Goals
+            </p>
+        </div>
+        <div class="working-process-wrapper">
+            <div class="work-tab">
+                <div>
+                    <h1>01</h1>
+                    <h2>Consultation</h2>
+                </div>
+                <button>
+                    <img src="./assets/icons/plus-icon.svg" alt="">
+                </button>
+            </div>
+            <div class="work-tab">
+                <div>
+                    <h1>02</h1>
+                    <h2>Research and Strategy Development</h2>
+                </div>
+                <button>
+                    <img src="./assets/icons/plus-icon.svg" alt="">
+                </button>
+            </div>
+            <div class="work-tab">
+                <div>
+                    <h1>03</h1>
+                    <h2>Implementation</h2>
+                </div>
+                <button>
+                    <img src="./assets/icons/plus-icon.svg" alt="">
+                </button>
+            </div>
+            <div class="work-tab">
+                <div>
+                    <h1>04</h1>
+                    <h2>Monitoring and Optimization</h2>
+                </div>
+                <button>
+                    <img src="./assets/icons/plus-icon.svg" alt="">
+                </button>
+            </div>
+            <div class="work-tab">
+                <div>
+                    <h1>05</h1>
+                    <h2>Reporting and Communication</h2>
+                </div>
+                <button>
+                    <img src="./assets/icons/plus-icon.svg" alt="">
+                </button>
+            </div>
+            <div class="work-tab">
+                <div>
+                    <h1>06</h1>
+                    <h2>Continual Improvement</h2>
+                </div>
+                <button>
+                    <img src="./assets/icons/plus-icon.svg" alt="">
+                </button>
+            </div>
+        </div>
     </section>
 </body>
 </html>
