updated media queries

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li>Blog</li>
             <li><button>Request a quote</button></li>
         </ul>
+        <button><img src="./assets/icons/menu-icon.svg" alt=""></button>
     </header>
     
     <!-- Hero section -->
@@ -192,58 +193,88 @@
         </div>
         <div class="working-process-wrapper">
             <div class="work-tab">
-                <div>
-                    <h1>01</h1>
-                    <h2>Consultation</h2>
+                <div class="work-tab-title">
+                    <div>
+                        <h1>01</h1>
+                        <h2>Consultation</h2>
+                    </div>
+                    <button class="tab-btn">
+                        <img src="./assets/icons/plus-icon.svg" alt="">
+                    </button>
                 </div>
-                <button>
-                    <img src="./assets/icons/plus-icon.svg" alt="">
-                </button>
+                <p class="tab-info">
+                    During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+                </p>
             </div>
             <div class="work-tab">
-                <div>
-                    <h1>02</h1>
-                    <h2>Research and Strategy Development</h2>
+                <div class="work-tab-title">
+                    <div>
+                        <h1>02</h1>
+                        <h2>Research and Strategy Development</h2>
+                    </div>
+                    <button class="tab-btn">
+                        <img src="./assets/icons/plus-icon.svg" alt="">
+                    </button>
                 </div>
-                <button>
-                    <img src="./assets/icons/plus-icon.svg" alt="">
-                </button>
+                <p class="tab-info">
+                    During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+                </p>
             </div>
             <div class="work-tab">
+               <div class="work-tab-title">
                 <div>
                     <h1>03</h1>
                     <h2>Implementation</h2>
                 </div>
-                <button>
+                <button class="tab-btn">
                     <img src="./assets/icons/plus-icon.svg" alt="">
                 </button>
+               </div>
+               <p class="tab-info">
+                During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+               </p>
             </div>
             <div class="work-tab">
+               <div class="work-tab-title">
                 <div>
                     <h1>04</h1>
                     <h2>Monitoring and Optimization</h2>
                 </div>
-                <button>
+                <button class="tab-btn">
                     <img src="./assets/icons/plus-icon.svg" alt="">
                 </button>
+               </div>
+               <p class="tab-info">
+                During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+               </p>
             </div>
             <div class="work-tab">
-                <div>
-                    <h1>05</h1>
-                    <h2>Reporting and Communication</h2>
+                <div class="work-tab-title">
+                    <div>
+                        <h1>05</h1>
+                        <h2>Reporting and Communication</h2>
+                    </div>
+                    <button class="tab-btn">
+                        <img src="./assets/icons/plus-icon.svg" alt="">
+                    </button>
                 </div>
-                <button>
-                    <img src="./assets/icons/plus-icon.svg" alt="">
-                </button>
+                <p class="tab-info">
+                    During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+                </p>
             </div>
             <div class="work-tab">
-                <div>
-                    <h1>06</h1>
-                    <h2>Continual Improvement</h2>
+                <div class="work-tab-title">
+                    <div>
+                        <h1>06</h1>
+                        <h2>Continual Improvement</h2>
+                    </div>
+                    <button class="tab-btn">
+                        <img src="./assets/icons/plus-icon.svg" alt="">
+                    </button>
                 </div>
-                <button>
-                    <img src="./assets/icons/plus-icon.svg" alt="">
-                </button>
+                <p class="tab-info">
+                    During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
+                </p>
             </div>
         </div>
     </section>
@@ -259,7 +290,9 @@
         <div class="team-wrapper">
             <div class="team-member">
                 <div class="title">
-                    <div class="team-img"></div>
+                    <div class="team-img">
+                        <img src="./assets/images/Team-pic1.png" alt="">
+                    </div>
                     <div>
                         <div class="circle">
                             <h2>in</h2>
@@ -274,7 +307,9 @@
             </div>
             <div class="team-member">
                 <div class="title">
-                    <div class="team-img"></div>
+                    <div class="team-img">
+                        <img src="./assets/images/Team-pic2.png" alt="">
+                    </div>
                     <div>
                         <div class="circle">
                             <h2>in</h2>
@@ -289,7 +324,9 @@
             </div>
             <div class="team-member">
                 <div class="title">
-                    <div class="team-img"></div>
+                    <div class="team-img">
+                        <img src="./assets/images/Team-pic3.png" alt="">
+                    </div>
                     <div>
                         <div class="circle">
                             <h2>in</h2>
@@ -304,7 +341,9 @@
             </div>
             <div class="team-member">
                 <div class="title">
-                    <div class="team-img"></div>
+                    <div class="team-img">
+                        <img src="./assets/images/Team-pic4.png" alt="">
+                    </div>
                     <div>
                         <div class="circle">
                             <h2>in</h2>
@@ -319,7 +358,9 @@
             </div>
             <div class="team-member">
                 <div class="title">
-                    <div class="team-img"></div>
+                    <div class="team-img">
+                        <img src="./assets/images/Team-pic5.png" alt="">
+                    </div>
                     <div>
                         <div class="circle">
                             <h2>in</h2>
@@ -334,7 +375,9 @@
             </div>
             <div class="team-member">
                 <div class="title">
-                    <div class="team-img"></div>
+                    <div class="team-img">
+                        <img src="./assets/images/Team-pic6.png" alt="">
+                    </div>
                     <div>
                         <div class="circle">
                             <h2>in</h2>
