--- a/index.html
+++ b/index.html
@@ -198,11 +198,12 @@
                         <h1>01</h1>
                         <h2>Consultation</h2>
                     </div>
-                    <button class="tab-btn">
-                        <img src="./assets/icons/plus-icon.svg" alt="">
+                    <button class="tab-btn" data-tab="1">
+                        <img src="./assets/icons/plus-icon.svg" alt="" class="plus-icon">
+                        <img src="./assets/icons/minus-icon.svg" alt="" class="minus-icon">
                     </button>
                 </div>
-                <p class="tab-info">
+                <p class="tab-info" id="tab-1">
                     During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
                 </p>
             </div>
@@ -212,11 +213,12 @@
                         <h1>02</h1>
                         <h2>Research and Strategy Development</h2>
                     </div>
-                    <button class="tab-btn">
-                        <img src="./assets/icons/plus-icon.svg" alt="">
+                    <button class="tab-btn" data-tab="2">
+                        <img src="./assets/icons/plus-icon.svg" alt="" class="plus-icon">
+                        <img src="./assets/icons/minus-icon.svg" alt="" class="minus-icon">
                     </button>
                 </div>
-                <p class="tab-info">
+                <p class="tab-info" id="tab-2">
                     During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
                 </p>
             </div>
@@ -226,11 +228,12 @@
                     <h1>03</h1>
                     <h2>Implementation</h2>
                 </div>
-                <button class="tab-btn">
-                    <img src="./assets/icons/plus-icon.svg" alt="">
+                <button class="tab-btn" data-tab="3">
+                    <img src="./assets/icons/plus-icon.svg" alt="" class="plus-icon">
+                    <img src="./assets/icons/minus-icon.svg" alt="" class="minus-icon">
                 </button>
                </div>
-               <p class="tab-info">
+               <p class="tab-info" id="tab-3">
                 During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
                </p>
             </div>
@@ -240,11 +243,12 @@
                     <h1>04</h1>
                     <h2>Monitoring and Optimization</h2>
                 </div>
-                <button class="tab-btn">
-                    <img src="./assets/icons/plus-icon.svg" alt="">
+                <button class="tab-btn" data-tab="4">
+                    <img src="./assets/icons/plus-icon.svg" alt="" class="plus-icon">
+                    <img src="./assets/icons/minus-icon.svg" alt="" class="minus-icon">
                 </button>
                </div>
-               <p class="tab-info">
+               <p class="tab-info" id="tab-4">
                 During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
                </p>
             </div>
@@ -254,11 +258,12 @@
                         <h1>05</h1>
                         <h2>Reporting and Communication</h2>
                     </div>
-                    <button class="tab-btn">
-                        <img src="./assets/icons/plus-icon.svg" alt="">
+                    <button class="tab-btn" data-tab="5">
+                        <img src="./assets/icons/plus-icon.svg" alt="" class="plus-icon">
+                        <img src="./assets/icons/minus-icon.svg" alt="" class="minus-icon">
                     </button>
                 </div>
-                <p class="tab-info">
+                <p class="tab-info" id="tab-5">
                     During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
                 </p>
             </div>
@@ -268,11 +273,12 @@
                         <h1>06</h1>
                         <h2>Continual Improvement</h2>
                     </div>
-                    <button class="tab-btn">
-                        <img src="./assets/icons/plus-icon.svg" alt="">
+                    <button class="tab-btn" data-tab="6">
+                        <img src="./assets/icons/plus-icon.svg" alt="" class="plus-icon">
+                        <img src="./assets/icons/minus-icon.svg" alt="" class="minus-icon">
                     </button>
                 </div>
-                <p class="tab-info">
+                <p class="tab-info" id="tab-6">
                     During the initial consultation, we will discuss your business goals and objectives, target audience, and current marketing efforts. This will allow us to understand your needs and tailor our services to best fit your requirements.
                 </p>
             </div>
